--- a/nodeserver/src/client/index.html
+++ b/nodeserver/src/client/index.html
@@ -13,6 +13,11 @@
         <div id="headerBar">
             <div class="navbar-inner">
                 <span class="brand">#YourProject#</span>
+                <div class="pull-right">
+                    <div class="navbar-text">
+                        <div class="version">version: pre-alpha...</div>
+                    </div>
+                </div>
             </div>
         </div>
         <div id="contentContainer">
