--- a/nodeserver/src/client/index.html
+++ b/nodeserver/src/client/index.html
@@ -7,7 +7,7 @@
         <link href="css/main.css" type="text/css" rel="stylesheet"/>
 
         <!-- Load main.js with RequireJS and launch the app from there -->
-        <script data-main="js/main" src="lib/require.js"></script>
+        <script data-main="js/main" src="lib/require/require.js"></script>
 	</head>
 	<body>
         <div id="headerBar">
