- added RequireCSS for requirejs - implemented bezier connection paths connectinn valid connectionpoints of the models/ports

--- a/nodeserver/src/client/js/ModelEditor/HTML/ModelPortLeftTmpl.html
+++ b/nodeserver/src/client/js/ModelEditor/HTML/ModelPortLeftTmpl.html
@@ -1,4 +1,4 @@
-<div  id='<%= pid %>' class='port port-<%= name %>'>
+<div  id='<%= pid %>' class='port'>
     <span class='dot'></span>
     <span class='title'><%= name %></span>
 </div>
