--- a/nodeserver/src/client/js/ModelEditor/HTML/ModelPortRightTmpl.html
+++ b/nodeserver/src/client/js/ModelEditor/HTML/ModelPortRightTmpl.html
@@ -1,4 +1,4 @@
-<div  id='<%= pid %>' class='port port-<%= name %>'>
+<div  id='<%= pid %>' class='port'>
     <span class='title'><%= name %></span>
     <span class='dot'></span>
 </div>
