--- a/nodeserver/src/client/js/GraphViz/GraphVizObjectTmpl.html
+++ b/nodeserver/src/client/js/GraphViz/GraphVizObjectTmpl.html
@@ -4,6 +4,17 @@
         <div class='core'>
             <span class='title' title='<%= name %>'><%= name %></span>
             <div class='topConnectionPoint'></div>
+            <!--<div class='pointerSources'>
+                <div class='pointer-source pointer-source-ref'></div>
+                <div class='pointer-source pointer-source-source'></div>
+                <div class='pointer-source pointer-source-target'></div>
+            </div>
+            <div class='pointerTargets'>
+                <div class='pointer-target pointer-target-ref'></div>
+                <div class='pointer-target pointer-target-source'></div>
+                <div class='pointer-target pointer-target-target'></div>
+            </div>
+            -->
         </div>
         <div class='bottomControls'>
             <div class='expandButton' title="Expand"></div>
