- connection area defined by the decorator in DOM - overlap detection and minimum shift handled in ModelEditorView - connection points are defined in DOM - connection area divided between the connections equally - connections segmentpoints are snapped to neighboruring ports - selection menu v0.1 impleemnted

--- a/nodeserver/src/client/js/ModelEditor/HTML/ModelPortLeftTmpl.html
+++ b/nodeserver/src/client/js/ModelEditor/HTML/ModelPortLeftTmpl.html
@@ -1,4 +1,4 @@
-<div  id='<%= pid %>' class='port'>
-    <span class='dot'></span>
+<div  id='<%= pid %>' class='port startConn finishConn' data-id='<%= pid %>'>
+    <span class='dot connEndPoint' data-id='<%= pid %>' data-or='W20'></span>
     <span class='title'><%= name %></span>
 </div>
