--- a/nodeserver/src/client/js/ModelEditor/HTML/ModelPortRightTmpl.html
+++ b/nodeserver/src/client/js/ModelEditor/HTML/ModelPortRightTmpl.html
@@ -1,4 +1,4 @@
-<div  id='<%= pid %>' class='port'>
+<div  id='<%= pid %>' class='port startConn finishConn' data-id='<%= pid %>'>
     <span class='title'><%= name %></span>
-    <span class='dot'></span>
+    <span class='dot connEndPoint' data-id='<%= pid %>' data-or='E20'></span>
 </div>
