Reposition Full refresh and Undo buttons into the left panel

--- a/nodeserver/src/client/index.html
+++ b/nodeserver/src/client/index.html
@@ -36,6 +36,15 @@
                     </div>
                 </div>
                 <div class="sidePaneWidget">
+                    <div class="header">Project</div>
+                    <div id="projectHistoryPanel">
+                        <div class="btn-group">
+                            <a class="btn btnFullRefresh" href="#" title="Full refresh"><i class="icon-refresh"></i></a>
+                            <a class="btn btnUndo" href="#" title="Undo"><i class="icon-circle-arrow-left"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="sidePaneWidget">
                     <div class="header">Inventory browser</div>
                     <div id="tbDynaTree"></div>
                 </div>
