--- a/nodeserver/src/client/index.html
+++ b/nodeserver/src/client/index.html
@@ -32,6 +32,9 @@
                             <li class="center pointer">
                                 <a class="btn-env" id="GraphViz">Graph Visualizer</a>
                             </li>
+                            <li class="center pointer">
+                                <a class="btn-env" id="ModelEditor2">Model Editor - fast</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
