--- a/nodeserver/src/client/js/ModelEditor2/ModelPortRightTmpl.html
+++ b/nodeserver/src/client/js/ModelEditor2/ModelPortRightTmpl.html
@@ -1,4 +1,4 @@
-<div  id='<%= pid %>' class='port startConn finishConn' data-id='<%= pid %>'>
-    <span class='title'><%= name %></span>
-    <span class='dot connEndPoint' data-id='<%= pid %>' data-or='E20'></span>
+<div  id='__ID__' class='port startConn finishConn' data-id='__ID__'>
+    <span class='title'>__NAME__</span>
+    <span class='dot connEndPoint' data-id='__ID__' data-or='E20'></span>
 </div>
