--- a/nodeserver/src/client/index.html
+++ b/nodeserver/src/client/index.html
@@ -26,7 +26,7 @@
                     <div class="header">Visualizer</div>
                     <div id="visualizerPanel">
                         <ul class="nav nav-pills nav-stacked">
-                            <li class="center pointer active">
+                            <li class="center pointer">
                                 <a class="btn-env" id="ModelEditor">Model Editor</a>
                             </li>
                             <li class="center pointer">
