--- a/nodeserver/src/client/selector.html
+++ b/nodeserver/src/client/selector.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <script src="lib/require/require.js"></script>
-    <title>Introducing brnahces to WebGME</title>
+    <title>Introducing branhces to WebGME</title>
     <script>
         DEBUG = true;
         _webGME_jquery_ver = '1.8.0';
@@ -33,17 +33,43 @@
                 "GraphViz": "js/GraphViz"
             }
         });
-        require(['jquery','order!underscore','js/corewrapper','domReady','commonUtil','core/core2','js/socmongo'],function(jQuery,underscore,CW,domReady,CU,CORE,ST){
+        require(['jquery',
+            'order!underscore',
+            'js/corewrapper',
+            'domReady',
+            'commonUtil',
+            'core/core2',
+            'js/socmongo',
+            'js/comitter',
+            'js/corewrapper2',
+            'order!js/ObjectBrowser/TreeBrowserControl',
+            'order!js/ObjectBrowser/JSTreeBrowserWidget'],
+                function(jQuery,
+                         underscore,
+                         CW,
+                         domReady,
+                         CU,
+                         CORE,
+                         ST,
+                         COM,
+                         CWRAPPER,
+                        TreeBrowserControl,
+                        JSTreeBrowserWidget){
             var options = CU.combinedserver;
             var proxy = null;
             var project = null;
             var storage = null;
             var core = null;
-            fillList = function(values){
-                var list = document.getElementById("projselect");
+            var comitter = null;
+            var currentRoot = null;
+            var mywrapper = null;
+            var treebrowser = null;
+            fillList = function(listId,values){
+                var list = document.getElementById(listId);
                 while (list.length>0){
                     list.remove(list.lenght-1);
                 }
+                list.disabled = false;
                 for(var i=0;i<values.length;i++){
                     var option = document.createElement('option');
                     option.innerHTML = values[i];
@@ -62,7 +88,7 @@
                             console.log("there is no available project!!");
                         } else {
                             /*filling up the list and enabling the open button*/
-                            fillList(projects);
+                            fillList("projselect",projects);
                         }
                     }
                 });
@@ -70,6 +96,35 @@
 
             printline = function(id,line){
                 document.getElementById(id).value += line+"\n";
+            };
+
+            refreshBranchList = function(){
+                storage.find({type:"branch"},function(err,branches){
+                    if(err){
+                        console.log(err);
+                    } else {
+                        var branchnames = [];
+                        for(var i=0;i<branches.length;i++){
+                            branchnames.push(branches[i].name);
+                        }
+                        fillList("branchlist",branchnames);
+                        if(branchnames.length>0){
+                            var button = document.getElementById("selectbutton");
+                            button.disabled = false;
+                        }
+                        if(branchnames.indexOf("*master") === -1){
+                            var button = document.getElementById("emptybutton");
+                            button.disabled = false;
+                            button = document.getElementById("newbutton");
+                            button.disabled = true;
+                        } else {
+                            var button = document.getElementById("newbutton");
+                            button.disabled = false;
+                            button = document.getElementById("emptybutton");
+                            button.disabled = true;
+                        }
+                    }
+                });
             };
 
             openProject = function(){
@@ -85,20 +140,18 @@
                                 console.log(err);
                             } else {
                                 core = new CORE(storage);
-                                storage.load("*master",function(err,master){
-                                    if(err){
-                                        console.log(err);
-                                    } else {
-                                        if(!master){
-                                            var button = document.getElementById("emptybutton");
-                                            button.disabled = false;
-                                        } else {
-                                            var button = document.getElementById("newbutton");
-                                            button.disabled = false;
-                                        }
-                                    }
-
+                                mywrapper = new CWRAPPER({
+                                    timelog: options.timelog,
+                                    mongosrv: projns,
+                                    socketiopar: options.socketiopar,
+                                    faulttolerant: options.faulttolerant,
+                                    cache: options.cache,
+                                    logging: options.logging,
+                                    logsrv: options.logsrv
                                 });
+
+                                treebrowser = new TreeBrowserControl(mywrapper, new JSTreeBrowserWidget("tbJSTree"));
+                                refreshBranchList();
                             }
                         });
                     }
@@ -109,12 +162,13 @@
                 var createBranchObj = function(key){
                     var branchobj = {
                         _id     : "*master",
-                        root    : key,
+                        root    : [key],
                         parents : [],
                         updates : [],
                         start   : null,
                         end     : null,
                         message : "generated master branch ...",
+                        name    : "master",
                         type    : "branch"
                     };
                     storage.save(branchobj,function(err){
@@ -122,6 +176,7 @@
                             console.log(err);
                         } else {
                             console.log("empty project have been created and master branch added");
+                            refreshBranchList();
                         }
                     });
                 };
@@ -148,6 +203,41 @@
                     console.log("there is no CORE!!!!");
                 }
             };
+
+            selectBranch = function(){
+                comitter = new COM(storage);
+                comitter.setRootUpdatedFunction(updateRoot);
+                var blist = document.getElementById("branchlist");
+                comitter.selectBranch(blist[blist.selectedIndex].value,function(err,roothash){
+                    if(err){
+                        console.log(err);
+                    } else {
+                        console.log("we received roothash: "+roothash);
+                        currentRoot = roothash;
+                        var button = document.getElementById("commitbutton");
+                        button.disabled = false;
+                    }
+                });
+            };
+
+            updateRoot = function(root){
+                console.log(JSON.stringify(root));
+            };
+
+            commit = function(){
+                comitter.commit(function(err){
+                    if(err){
+                        console.log(err);
+                    } else {
+                        console.log("successfully commited to the branch");
+                    }
+                });
+            };
+
+
+
+
+
             domReady(function(){
 
                 proxy = io.connect(location.host + options.projsrv,options.socketiopar);
@@ -162,14 +252,30 @@
 <body>
 --- Project selection part --- </br>
 Select which project you would like to use:
-<select id="projselect">
+<select id="projselect" disabled>
     <option value="loading" >...loading...</option>
 </select>
 and then press the
 <input id="openbutton" type="button" value="open" disabled onclick="openProject()">
 to open it! </br>
 --- Branch selection part --- </br>
+Here are the available branches:
+<select id="branchlist" disabled>
+    <option value="loading" >...loading...</option>
+</select>
+which you can
+<input id="selectbutton" type="button" value="select" disabled onclick="selectBranch()"></br>
+or you can </br>
 <input id="emptybutton" type="button" value="create" disabled onclick="createProject()"> an empty project with "master" branch </br>
-<input id="newbutton" type="button" value="create" disabled onclick="createBranch()"> a new branch to the latest master commit </br>
+<input id="newbutton" type="button" value="create" disabled onclick="createBranch()"> a new branch with name <input id="newbranchname" value="some branch name"> to the latest master commit </br>
+ --- Branch modifications part --- </br>
+<input id="commitbutton" type="button" value="commit" disabled onclick="commit()"> to the selected branch </br>
+here we should load the treebrowser for example :) </br>
+<div id="rightPane" class="pull-right">
+    <div class="sidePaneWidget">
+        <div class="header">Object Browser</div>
+        <div id="tbJSTree"></div>
+    </div>
+</div>
 </body>
 </html>
