Now the branching goes - official - - the branch tab is simple but works (no new branch creation yet) - all other function seems to work as expected

--- a/nodeserver/src/client/index.html
+++ b/nodeserver/src/client/index.html
@@ -12,7 +12,7 @@
 	<body>
         <div id="headerBar">
             <div class="navbar-inner">
-                <span class="brand">#YourProject#</span>
+                <span id="maintitlespan" class="brand">#YourProject#</span>
                 <div class="pull-right">
                     <div class="navbar-text">
                         <div class="version">version: pre-alpha...</div>
@@ -46,6 +46,10 @@
                             <a class="btn btnUndo" href="#" title="Undo"><i class="icon-circle-arrow-left"></i></a>
                         </div>
                     </div>
+                </div>
+                <div class="sidePaneWidget">
+                    <div class="header">Commit Browser</div>
+                    <div id="commitbrowser"></div>
                 </div>
                 <!--
                 <div class="sidePaneWidget">
