--- a/nodeserver/src/client/index.html
+++ b/nodeserver/src/client/index.html
@@ -51,6 +51,10 @@
                     <div class="header">Commit Browser</div>
                     <div id="commitbrowser"></div>
                 </div>
+                <div class="sidePaneWidget">
+                    <div class="header">Part browser</div>
+                    <div id="pPartBrowser"></div>
+                </div>
                 <!--
                 <div class="sidePaneWidget">
                     <div class="header">Inventory browser</div>
