Project -> Commit button on left panel

--- a/nodeserver/src/client/index.html
+++ b/nodeserver/src/client/index.html
@@ -43,7 +43,8 @@
                     <div id="projectHistoryPanel">
                         <div class="btn-group">
                             <a class="btn btnFullRefresh" href="#" title="Full refresh"><i class="icon-refresh"></i></a>
-                            <a class="btn btnUndo" href="#" title="Undo"><i class="icon-circle-arrow-left"></i></a>
+                            <!--<a class="btn btnUndo" href="#" title="Undo"><i class="icon-circle-arrow-left"></i></a>-->
+                            <a class="btn btnCommit" href="#" title="Commit"><i class="icon-share-alt"></i></a>
                         </div>
                     </div>
                 </div>
