--- a/nodeserver/src/client/index.html
+++ b/nodeserver/src/client/index.html
@@ -40,13 +40,7 @@
                 </div>
                 <div class="sidePaneWidget">
                     <div class="header">Project</div>
-                    <div id="projectHistoryPanel">
-                        <div class="btn-group">
-                            <a class="btn btnFullRefresh" href="#" title="Full refresh"><i class="icon-refresh"></i></a>
-                            <!--<a class="btn btnUndo" href="#" title="Undo"><i class="icon-circle-arrow-left"></i></a>-->
-                            <a class="btn btnCommit" href="#" title="Commit"><i class="icon-share-alt"></i></a>
-                        </div>
-                    </div>
+                    <div id="projectHistoryPanel"></div>
                 </div>
                 <div class="sidePaneWidget">
                     <div class="header">Commit Browser</div>
