--- a/nodeserver/src/client/js/Project/ProjectPanelTmpl.html
+++ b/nodeserver/src/client/js/Project/ProjectPanelTmpl.html
@@ -2,6 +2,7 @@
     <a class="btn btnFullRefresh" href="#" title="Full refresh"><i class="icon-refresh"></i></a>
     <!--<a class="btn btnUndo" href="#" title="Undo"><i class="icon-circle-arrow-left"></i></a>-->
     <a class="btn btnCommit" href="#" title="Commit"><i class="icon-share-alt"></i></a>
+    <a class="btn btnRepoHistory" href="#" title="Repo History"><i class="icon-road"></i></a>
 </div>
 <div class="commitMsgDialog modal hide fade" style="display: none; ">
     <div class="modal-header">
@@ -14,5 +15,16 @@
     <div class="modal-footer">
         <a href="#" class="btn" data-dismiss="modal">Cancel</a>
         <a href="#" id="btnSave" class="btn btn-primary disabled">OK</a>
+    </div>
+</div>
+<div class="repoHistoryDialog modal hide fade" style="display: none; ">
+    <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">×</button>
+        <h3>Repository history</h3>
+    </div>
+    <div class="modal-body">
+    </div>
+    <div class="modal-footer">
+        <a href="#" class="btn" data-dismiss="modal">Close</a>
     </div>
 </div>
