removing prev commit browser form TKecskes

--- a/nodeserver/src/client/index.html
+++ b/nodeserver/src/client/index.html
@@ -42,10 +42,11 @@
                     <div class="header">Project</div>
                     <div id="projectHistoryPanel"></div>
                 </div>
-                <div class="sidePaneWidget">
+                <!--<div class="sidePaneWidget">
                     <div class="header">Commit Browser</div>
                     <div id="commitbrowser"></div>
                 </div>
+                -->
                 <div class="sidePaneWidget">
                     <div class="header">Part browser</div>
                     <div id="pPartBrowser"></div>
