--- a/nodeserver/src/client/js/Project/ProjectPanelTmpl.html
+++ b/nodeserver/src/client/js/Project/ProjectPanelTmpl.html
@@ -8,10 +8,23 @@
 <div class="commitMsgDialog modal hide fade" style="display: none; ">
     <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">×</button>
-        <h3>Commit message</h3>
+        <h3>Commit</h3>
     </div>
     <div class="modal-body">
-        <textarea id="txtMessage" class="input-block-level" rows="3"></textarea>
+        <fieldset>
+            <legend>Select branch</legend>
+            <div class="btn-group" data-toggle="buttons-radio" id="btnGroupBranch">
+                <button type="button" class="btn btnCurrent active" data-b="current">Current</button>
+                <button type="button" class="btn btnNew" data-b="new">New branch</button>
+            </div>
+            <br/>
+            <input type="text" id="txtBranchName" class="input-block-level" placeholder="Type your branch name here..." disabled />
+        </fieldset>
+        <br/>
+        <fieldset>
+            <legend>Type message</legend>
+            <textarea id="txtMessage" class="input-block-level" rows="3"></textarea>
+        </fieldset>
     </div>
     <div class="modal-footer">
         <a href="#" class="btn" data-dismiss="modal">Cancel</a>
