some basic validation for commit message and branch name

--- a/nodeserver/src/client/js/Project/ProjectPanelTmpl.html
+++ b/nodeserver/src/client/js/Project/ProjectPanelTmpl.html
@@ -18,12 +18,16 @@
                 <button type="button" class="btn btnNew" data-b="new">New branch</button>
             </div>
             <br/>
-            <input type="text" id="txtBranchName" class="input-block-level" placeholder="Type your branch name here..." disabled />
+            <div class="control-group control-group-branch">
+                <input type="text" id="txtBranchName" class="input-block-level" placeholder="Type your branch name here..." disabled />
+            </div>
         </fieldset>
         <br/>
         <fieldset>
             <legend>Type message</legend>
-            <textarea id="txtMessage" class="input-block-level" rows="3"></textarea>
+            <div class="control-group control-group-message">
+                <textarea id="txtMessage" class="input-block-level" rows="3"></textarea>
+            </div>
         </fieldset>
     </div>
     <div class="modal-footer">
