introducing network status control

--- a/nodeserver/src/client/index.html
+++ b/nodeserver/src/client/index.html
@@ -75,6 +75,7 @@
         </div>
         <div id="footerBar">
             <div class="navbar-inner">
+                <div id="panNetworkStatus" class="pull-right"></div>
             </div>
         </div>
 	</body>
