--- a/nodeserver/src/client/js/Project/ProjectPanelTmpl.html
+++ b/nodeserver/src/client/js/Project/ProjectPanelTmpl.html
@@ -54,7 +54,15 @@
     <div class="modal-body">
     </div>
     <div class="modal-footer">
-        <a href="#" class="btn" data-dismiss="modal">Close</a>
-        <a href="#" class="btn btn-primary disabled" id="btnOpenProject">Open</a>
+        <div id="buttonsPanel">
+            <a href="#" class="btn pull-left" id="btnCreateNewProject">Create new...</a>
+            <a href="#" class="btn" data-dismiss="modal">Close</a>
+            <a href="#" class="btn btn-primary disabled" id="btnOpenProject">Open</a>
+        </div>
+        <div id="createProjectPanel" class="hide control-group">
+            <input type="text" id="txtNewProjectName" class="input-xlarge pull-left" placeholder="Type your project name here..."/>
+            <a href="#" class="btn" id="btnNewProjectCancel">Cancel</a>
+            <a href="#" class="btn btn-primary disabled" id="btnNewProjectCreate">Create</a>
+        </div>
     </div>
 </div>
