Project title and read-only info in separate widget

--- a/nodeserver/src/client/index.html
+++ b/nodeserver/src/client/index.html
@@ -10,9 +10,9 @@
         <script data-main="js/main" src="lib/require/require.js"></script>
 	</head>
 	<body>
-        <div id="headerBar">
+        <div class="navbar navbar-inverse navbar-fixed-top">
             <div class="navbar-inner">
-                <span id="maintitlespan" class="brand">#YourProject#</span>
+                <div id="projectInfoContainer"></div>
                 <div class="pull-right">
                     <div class="navbar-text">
                         <div class="version">version: pre-alpha...</div>
@@ -73,7 +73,7 @@
                 </div>
             </div>
         </div>
-        <div id="footerBar">
+        <div class="navbar navbar-inverse">
             <div class="navbar-inner">
                 <div id="panNetworkStatus" class="pull-right"></div>
             </div>
