--- a/nodeserver/src/client/index.html
+++ b/nodeserver/src/client/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title> -= YourProject =- WebGME (beta)</title>
+		<title>WebGME</title>
 
         <!-- CSS libraries -->
         <link href="css/main.css" type="text/css" rel="stylesheet"/>
