temporary set editor in left panel

--- a/nodeserver/src/client/index.html
+++ b/nodeserver/src/client/index.html
@@ -51,12 +51,10 @@
                     <div class="header">Part browser</div>
                     <div id="pPartBrowser"></div>
                 </div>
-                <!--
                 <div class="sidePaneWidget">
-                    <div class="header">Inventory browser</div>
-                    <div id="tbDynaTree"></div>
+                    <div class="header">Set Editor</div>
+                    <div id="pSetEditor"></div>
                 </div>
-                -->
             </div>
             <div id="middlePane" class="pull-left" style="overflow: hidden">
                     <div id="modelEditorContainer1" style="overflow: auto; float: left; position: absolute;">
