--- a/nodeserver/src/client/index.html
+++ b/nodeserver/src/client/index.html
@@ -8,6 +8,9 @@
 
         <!-- Load main.js with RequireJS and launch the app from there -->
         <script data-main="js/main" src="lib/require/require.js"></script>
+
+        <!-- favicon -->
+        <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 	</head>
 	<body>
         <div class="navbar navbar-inverse navbar-fixed-top">
