hacking MetaEdit features into ModelEditor2

--- a/nodeserver/src/client/index.html
+++ b/nodeserver/src/client/index.html
@@ -38,6 +38,12 @@
                             <li class="center pointer">
                                 <a class="btn-env" id="ModelEditor2">Model Editor - fast</a>
                             </li>
+                            <li class="center pointer">
+                                <a class="btn-env" id="DesignerCanvas_Model">ModelEditor</a>
+                            </li>
+                            <li class="center pointer">
+                                <a class="btn-env" id="DesignerCanvas_Meta">MetaEditor</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
