--- a/nodeserver/src/client/js/DiagramDesigner/DefaultDecoratorTemplate.html
+++ b/nodeserver/src/client/js/DiagramDesigner/DefaultDecoratorTemplate.html
@@ -1,8 +1,5 @@
-<div class="modelTitle"></div>
-<div class="attributes"></div>
-<div class='connEndPoint bottom' data-or='S20'></div>
-<div class='connEndPoint top' data-or='N20'></div>
-<div class='myConnRect bottom startConn'></div>
-<div class='myConnRect top startConn'></div>
-<div class='connEndPoint left' data-or='W20'></div>
-<div class='connEndPoint right' data-or='E20'></div>
+<div class="default-decorator">
+    <div class="name"></div>
+    <div class='connector bottom'></div>
+    <div class='connector top'></div>
+</div>
