addig LOG level setter control to UI

--- a/nodeserver/src/client/index.html
+++ b/nodeserver/src/client/index.html
@@ -82,6 +82,8 @@
         </div>
         <div class="navbar navbar-inverse">
             <div class="navbar-inner">
+                <div id="panLoggerStatus" class="pull-right"></div>
+                <div class="spacer pull-right"></div>
                 <div id="panNetworkStatus" class="pull-right"></div>
             </div>
         </div>
