remove invalid content from default template file

--- a/nodeserver/src/client/js/NetworkStatus/NetworkStatusTmpl.html
+++ b/nodeserver/src/client/js/NetworkStatus/NetworkStatusTmpl.html
@@ -3,10 +3,5 @@
     <button class="btn btn-micro btn-gray dropdown-toggle btnStatusDropDown" data-toggle="dropdown">
         <span class="caret"></span>
     </button>
-    <ul class="dropdown-menu pull-right">
-        <li><a tabindex="-1" href="#">Action</a></li>
-        <li><a tabindex="-1" href="#">Action</a></li>
-        <li><a tabindex="-1" href="#">Action</a></li>
-        <li><a tabindex="-1" href="#">Action</a></li>
-    </ul>
+    <ul class="dropdown-menu pull-right"></ul>
 </div>
