nodeserver: fix the spelling (lowercase) of CommonUtil, which prevented the server to work on unix

--- a/nodeserver/src/client/hashbuilder.html
+++ b/nodeserver/src/client/hashbuilder.html
@@ -3,7 +3,7 @@
     <script src="lib/require/require.js"></script>
     <title>This page build up a hash</title>
     <script>
-        require(["js/socmongo","core/core2","../common/commonUtil","/socket.io/socket.io.js"],function(MNG,CORE,COMMON){
+        require(["js/socmongo","core/core2","../common/CommonUtil","/socket.io/socket.io.js"],function(MNG,CORE,COMMON){
             var roothash = null;
             var storage = null;
             var COUNT = 10000;
