SetEditor in keft panel made live
SetEditor in left panel listens for load/update/unload events of the
currently opened node and refreshes the SetList when needed

--- a/nodeserver/src/client/index.html
+++ b/nodeserver/src/client/index.html
@@ -36,10 +36,10 @@
                                 <a class="btn-env" id="GraphViz">Graph Visualizer</a>
                             </li>
                             <li class="center pointer">
-                                <a class="btn-env" id="ModelEditor2">Model Editor - fast</a>
+                                <a class="btn-env" id="ModelEditor2">Model Editor #2</a>
                             </li>
                             <li class="center pointer">
-                                <a class="btn-env" id="DesignerCanvas_Model">ModelEditor</a>
+                                <a class="btn-env" id="DesignerCanvas_Model">ModelEditor #3</a>
                             </li>
                             <li class="center pointer">
                                 <a class="btn-env" id="SetEditorCanvas">SetEditor</a>
