--- a/nodeserver/src/client/js/SetEditor/SetDropDownTmpl.html
+++ b/nodeserver/src/client/js/SetEditor/SetDropDownTmpl.html
@@ -1,8 +1,10 @@
-<div class="btn-group inline">
-    <button class="btn btn-small dropdown-toggle btnDropDown" data-toggle="dropdown"><span class="caret"></span></button>
-    <ul class="dropdown-menu"></ul>
+<div class="inline">
+    <div class="set-editor-title"></div>
 </div>
 <div class="btn-group inline">
     <a class="btn btn-small btnRefresh" href="#" title="Refresh"><i class="icon-refresh"></i></a>
 </div>
-<div class="items" style="display: none;"></div>
+<div class="set-list-container">
+    <ul class="set-list unstyled">
+    </ul>
+</div>
