--- a/nodeserver/src/client/js/ModelEditor3/Decorators/CircleDecorator/CircleDecoratorTemplate.html
+++ b/nodeserver/src/client/js/ModelEditor3/Decorators/CircleDecorator/CircleDecoratorTemplate.html
@@ -1,6 +1,6 @@
 <div class="circle-decorator">
     <div id="circle-wrapper" ><canvas id="circleCanvas" class="arrow"></canvas></div>
-    <div class="name"></div>
+    <span class="name"></span>
     <div class='connector bottom'></div>
     <div class='connector top'></div>
     <div class='connector left'></div>
