--- a/nodeserver/src/client/index.html
+++ b/nodeserver/src/client/index.html
@@ -44,6 +44,9 @@
                             <li class="center pointer">
                                 <a class="btn-env" id="SetEditorCanvas">SetEditor</a>
                             </li>
+                            <li class="center pointer">
+                                <a class="btn-env" id="HierarchyGridViewControl">GridView - Containment</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
