--- a/nodeserver/src/client/js/ModelEditor3/Decorators/DecoratorWithPorts/PortLeftTmpl.html
+++ b/nodeserver/src/client/js/ModelEditor3/Decorators/DecoratorWithPorts/PortLeftTmpl.html
@@ -1,3 +1,7 @@
+<!-- *********************************************************************** -->
+<!-- FILE IS OBSOLETE NOW, ALL THIS STRUCTURE IS BUILT IN JAVASCRIPT PORT.JS -->
+<!-- *********************************************************************** -->
+
 <div  id='__ID__' class='port' data-id='__ID__'>
     <span class='dot' data-id='__ID__' data-or='W20'></span>
     <div class='connector'></div>
