--- a/nodeserver/src/client/js/ModelEditor3/Decorators/DecoratorWithPorts/PortRightTmpl.html
+++ b/nodeserver/src/client/js/ModelEditor3/Decorators/DecoratorWithPorts/PortRightTmpl.html
@@ -1,3 +1,7 @@
+<!-- *********************************************************************** -->
+<!-- FILE IS OBSOLETE NOW, ALL THIS STRUCTURE IS BUILT IN JAVASCRIPT PORT.JS -->
+<!-- *********************************************************************** -->
+
 <div  id='__ID__' class='port' data-id='__ID__'>
     <div class='title-wrapper'>
         <span class='title'>__NAME__</span>
