--- a/nodeserver/src/client/js/DataGrid/DataTableTemplate.html
+++ b/nodeserver/src/client/js/DataGrid/DataTableTemplate.html
@@ -1,3 +1,3 @@
-<table cellpadding="0" cellspacing="0" border="0" width="100%" class="table table-bordered table-striped table-hover selectable">
+<table cellpadding="0" cellspacing="0" border="0" width="100%" class="table table-bordered table-striped table-hover user-select-on">
     <thead></thead>
 </table>
