add Delete project support to UI

--- a/nodeserver/src/client/js/Project/ProjectPanelTmpl.html
+++ b/nodeserver/src/client/js/Project/ProjectPanelTmpl.html
@@ -56,8 +56,9 @@
     <div class="modal-footer">
         <div id="buttonsPanel">
             <a href="#" class="btn pull-left" id="btnCreateNewProject">Create new...</a>
+            <a href="#" class="btn btn-primary disabled hide" id="btnOpenProject">Open</a>
+            <a href="#" class="btn btn-danger disabled hide" id="btnDeleteProject">Delete</a>
             <a href="#" class="btn" data-dismiss="modal">Close</a>
-            <a href="#" class="btn btn-primary disabled" id="btnOpenProject">Open</a>
         </div>
         <div id="createProjectPanel" class="hide control-group">
             <input type="text" id="txtNewProjectName" class="input-xlarge pull-left" placeholder="Type your project name here..."/>
