--- a/nodeserver/src/client/index.html
+++ b/nodeserver/src/client/index.html
@@ -54,7 +54,7 @@
                 </div>
             </div>
         </div>
-        <div class="navbar navbar-inverse">
+        <div class="navbar navbar-inverse navbar-fixed-bottom">
             <div class="navbar-inner">
                 <div id="panLoggerStatus" class="pull-right"></div>
                 <div class="spacer pull-right"></div>
