--- a/nodeserver/src/client/index.html
+++ b/nodeserver/src/client/index.html
@@ -42,10 +42,8 @@
                     <div id="pSetEditor"></div>
                 </div>
             </div>
-            <div id="middlePane" class="pull-left" style="overflow: hidden">
-                    <div id="mainWidgetContainer" style="overflow: auto;float: left; position: absolute;">
-                        <div id="mainWidget"></div>
-                    </div>
+            <div id="middlePane" class="pull-left" >
+                    <div id="mainWidget"></div>
             </div>
             <div id="rightPane" class="pull-right">
                 <div class="sidePaneWidget">
