layout updated and fixed

--- a/nodeserver/src/client/index.html
+++ b/nodeserver/src/client/index.html
@@ -13,7 +13,7 @@
         <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 	</head>
 	<body>
-        <div class="navbar navbar-inverse navbar-fixed-top">
+        <div id="header" class="navbar navbar-inverse navbar-fixed-top">
             <div class="navbar-inner">
                 <div id="projectInfoContainer"></div>
                 <div class="pull-right">
@@ -52,7 +52,7 @@
                 </div>
             </div>
         </div>
-        <div class="navbar navbar-inverse navbar-fixed-bottom">
+        <div id="footer" class="navbar navbar-inverse navbar-fixed-bottom">
             <div class="navbar-inner">
                 <div id="panLoggerStatus" class="pull-right"></div>
                 <div class="spacer pull-right"></div>
