--- a/nodeserver/src/client/index.html
+++ b/nodeserver/src/client/index.html
@@ -57,6 +57,8 @@
                 <div id="panLoggerStatus" class="pull-right"></div>
                 <div class="spacer pull-right"></div>
                 <div id="panNetworkStatus" class="pull-right"></div>
+                <div class="spacer pull-right"></div>
+                <div id="panBranchManager" class="pull-right"></div>
             </div>
         </div>
 	</body>
