--- a/nodeserver/src/client/index.html
+++ b/nodeserver/src/client/index.html
@@ -24,7 +24,7 @@
             </div>
         </div>
         <div id="contentContainer">
-            <div id="leftPane" class="pull-left" style="display: none">
+            <div id="leftPane" class="pull-left sidePane" style="display: none">
                 <div class="sidePaneWidget">
                     <div class="header">Visualizer</div>
                     <div id="visualizerPanel"></div>
@@ -43,9 +43,8 @@
                 </div>
             </div>
             <div id="middlePane" class="pull-left" >
-                    <div id="mainWidget"></div>
             </div>
-            <div id="rightPane" class="pull-right" style="display: none">
+            <div id="rightPane" class="pull-right  sidePane" style="display: none">
                 <div class="sidePaneWidget">
                     <div class="header">Object Browser</div>
                     <div id="tbJSTree"></div>
