removing old ModelEditor mockup versions and update dependant remaning code

--- a/nodeserver/src/client/selector.html
+++ b/nodeserver/src/client/selector.html
@@ -18,19 +18,10 @@
                 "eventDispatcher": './../../common/EventDispatcher',
                 "notificationManager": 'js/NotificationManager',
                 "clientUtil": 'js/util',
-                "bezierHelper" : 'js/BezierHelper',
-                "raphaeljs": 'lib/raphael/raphael.amd',
-                "eve": 'lib/raphael/eve',
                 "order": 'lib/require/order',
                 "text":	'lib/require/text',
                 "css": 'lib/require/css',
-                "domReady":	'lib/require/domReady',
-                "ModelEditorHTML": "js/ModelEditor/HTML",
-                "nodeAttributeNames": 'js/ModelEditor/HTML/NodeAttributeNames',
-                "nodeRegistryNames": 'js/ModelEditor/HTML/NodeRegistryNames',
-                "ModelEditorHTMLCSS": "css/ModelEditor",
-                "GraphVizCSS": "css/GraphViz",
-                "GraphViz": "js/GraphViz"
+                "domReady":	'lib/require/domReady'
             }
         });
         require(['jquery',
