--- a/nodeserver/src/client/index.html
+++ b/nodeserver/src/client/index.html
@@ -10,7 +10,7 @@
         <script data-main="js/main" src="lib/require/require.js"></script>
 
         <!-- favicon -->
-        <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+        <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
 	</head>
     <body>
         <div style="position: absolute; width: 100%; height: 86px;line-height: 86px;text-align: center;top: 50%;margin: -43px 0 0 0;">
