--- a/client/html/Panels/Project/ProjectPanel.html
+++ b/client/html/Panels/Project/ProjectPanel.html
@@ -1,5 +1,5 @@
 <div class="btn-group btn-group-vertical" style="width: 100%">
     <a class="btn btn-projects"><i class="icon-tags"></i> Manage projects...</a>
-    <a class="btn btn-repository"><i class="icon-road"></i> Show project repository...</a>
+    <a class="btn btn-repository"><i class="icon-road"></i> Project repository...</a>
     <a class="btn btn-commit"><i class="icon-share-alt"></i> Commit...</a>
 </div>
