--- a/client/js/Decorators/DiagramDesigner/Decorators/CircleDecorator/CircleDecoratorTemplate.html
+++ b/client/js/Decorators/DiagramDesigner/Decorators/CircleDecorator/CircleDecoratorTemplate.html
@@ -1,5 +1,5 @@
 <div class="circle-decorator">
-    <div id="circle-wrapper" ><canvas id="circleCanvas" class="arrow"></canvas></div>
+    <div id="circle-wrapper" ><div id="circleCanvas" class></div></div>
     <span class="name"></span>
     <div class='connector bottom'></div>
     <div class='connector top'></div>
