secure webgme server implementation next steps: - now possible to login with google account as well as username + password (proper data needed inside usermanager)

--- a/client/login.html
+++ b/client/login.html
@@ -17,5 +17,6 @@
         <input type="submit" value="Log In"/>
     </div>
 </form>
+<button onclick="window.location.href='/login/google'">LogInWithGoogle</button>
 </body>
 </html>
